fix: prevent anchors spacing too far.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -13,26 +13,31 @@ body {
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
-  /* justify-content: space-between; */
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  padding: 8px;
+
+  
   
   
 }
+
+
 .container {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  flex: 1;
-  padding: 8px;
   align-items: center;
+  
   
   
 }
 
 .container-second {
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  gap: 16px;
 }
+
+
 
 
 
@@ -42,6 +47,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  
 }
 
 .logo {
@@ -49,7 +55,6 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-  
   
   
 }
@@ -60,7 +65,10 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  
 }
+
+
 
 a {
   /* this removes the line under our links */
@@ -73,23 +81,12 @@ a {
 ul {
   list-style-type: none;
   display: flex;
+  gap: 16px;
+  padding: 16px;
+  
+  
   
 }
 
-.links-one {
-  display: flex;
-  border: 2px solid;
-}
-
-.links-two {
-  display: flex;
-  border: 2px solid;
-}
-
-.links-three {
-  display: flex;
-  border: 2px solid;
-
-}
 
 
